--- a/Роман-Скрильник.html
+++ b/Роман-Скрильник.html
@@ -49,7 +49,7 @@
     </section>
     <section class="u-align-center u-clearfix u-image u-section-2" id="carousel_082c" data-image-width="1600" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-white u-text-1">Тут запишу кращі прочитані  книги&nbsp;(оновлю як буду пригадувати) та бажані на майбутнє:</span>
+        <h2 class="u-text u-text-white u-text-1">Тут запишу кращі прочитані  книги&nbsp;(оновлю як буду пригадувати) та бажані на майбутнє:
         </h2>
         <p class="u-text u-text-palette-1-light-3 u-text-2">Потрібне:</p>
         <p class="u-text u-text-palette-1-light-3 u-text-3">Прочитане:</p>
